--- a/XamarinForms/Auth0XamarinForms/Auth0XamarinForms/Auth0XamarinForms/Pages/MainPage.xaml
+++ b/XamarinForms/Auth0XamarinForms/Auth0XamarinForms/Auth0XamarinForms/Pages/MainPage.xaml
@@ -4,9 +4,9 @@
              xmlns:local="clr-namespace:Auth0XamarinForms"
              x:Class="Auth0XamarinForms.Pages.MainPage">
 
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label x:Name="GreetingLabel" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+    <StackLayout HorizontalOptions="Center">
+        <Image x:Name="UserImage" Margin="0,20,0,0" HeightRequest="240" WidthRequest="240"/>
+        <Label x:Name="GreetingLabel" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" FontAttributes="Bold" />
     </StackLayout>
 
 </ContentPage>
